--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "require": {
         "php": ">=5.4.0",
         "doctrine/doctrine-orm-module": "dev-master",
+        "zendframework/zend-modulemanager": "~2.5"
         "fzaninotto/faker": "1.5.*@dev",
         "nelmio/alice": "2.0.*@dev",
         "bacon/bacon-string-utils": "dev-master"
