--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: php
 
 php:
-    - 5.5
-    - 5.6
-    - 7.0
+    - 7.2
     - hhvm
 
 before_script:
@@ -15,9 +13,9 @@ script:
 
 matrix:
     allow_failures:
-        - php: 7.0
         - php: hhvm
 
 branches:
     only:
         - master
+        - develop
