--- a/config/aist-alice-fixtures.local.php.dist
+++ b/config/aist-alice-fixtures.local.php.dist
@@ -1,21 +1,21 @@
 <?php
 
 /**
- * AistAliceFixtures (http://mateuszsitek.com/projects/aist-alice-fixtures)
+ * Aist Alice Fixtures (http://mateuszsitek.com/projects/aist-alice-fixtures)
  *
  * @link      http://github.com/ma-si/aist-alice-fixtures for the canonical source repository
- * @copyright Copyright (c) 2006-2015 Aist Internet Technologies (http://aist.pl) All rights reserved.
+ * @copyright Copyright (c) 2017-2018 DIGITAL WOLVES LTD (http://digitalwolves.ltd) All rights reserved.
  * @license   http://opensource.org/licenses/BSD-3-Clause BSD-3-Clause
  */
 
 return [
     'service_manager' => [
         'invokables' => [
-//            'fixtures.loader' => 'Nelmio\Alice\Fixtures\Loader',
+//            'fixtures.loader' => \Nelmio\Alice\Fixtures\Loader::class,
         ],
         'factories' => [
-            'fixtures.loader' => 'AistAliceFixtures\Service\FixturesLoaderFactory',
-            'fixture.persister' => 'AistAliceFixtures\Service\FixturesPersisterFactory',
+            'fixtures.loader' => \Aist\AliceFixtures\Service\FixturesLoaderFactory::class,
+            'fixture.persister' => \Aist\AliceFixtures\Service\FixturesPersisterFactory::class,
         ],
     ],
     'fixture_manager' => [
