--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,10 +9,9 @@
         convertWarningsToExceptions = "true"
         processIsolation            = "false"
         stopOnFailure               = "false"
-        syntaxCheck                 = "false"
         bootstrap                   = "./test/bootstrap.php" >
     <testsuites>
-        <testsuite name="AistAliceFixtures Test Suite">
+        <testsuite name="Aist Alice Fixtures Test Suite">
             <directory>./test/</directory>
         </testsuite>
     </testsuites>
@@ -30,13 +29,13 @@
     </filter>
 
     <logging>
-        <log type="coverage-html" target="build/coverage" title="Linkania Coverage" charset="UTF-8" yui="true" highlight="true" lowUpperBound="35" highLowerBound="70"/>
+        <log type="coverage-html" target="build/coverage" lowUpperBound="35" highLowerBound="70"/>
         <log type="coverage-clover" target="build/logs/clover.xml"/>
         <log type="coverage-php" target="build/logs/coverage.serialized"/>
         <log type="coverage-text" target="php://stdout" showUncoveredFiles="false"/>
         <log type="json" target="build/logs/logfile.json"/>
         <log type="tap" target="build/logs/logfile.tap"/>
-        <log type="junit" target="build/logs/junit.xml" logIncompleteSkipped="false"/>
+        <log type="junit" target="build/logs/junit.xml"/>
         <log type="testdox-html" target="build/logs/testdox.html"/>
         <log type="testdox-text" target="build/logs/testdox.txt"/>
     </logging>
